--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Dex-Rip/Rip-sdk",
+  "repository": "https://github.com/Dex-Rip/sdk",
   "keywords": [
     "Dex-Rip",
     "avalanche"
